--- a/app/views/factory/admin/product_items/show.html.erb
+++ b/app/views/factory/admin/product_items/show.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <tr>
       <td class="right aligned"><%= ProductItem.human_attribute_name(:qr_file) %></td>
-      <td><%= @product_item.qr_file %></td>
+      <td><%= image_tag @product_item.qr_file %></td>
     </tr>
   </tbody>
 </table>
