--- a/app/views/factory/admin/products/show.html.erb
+++ b/app/views/factory/admin/products/show.html.erb
@@ -11,8 +11,8 @@
       <td><%= @product.name %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Product.human_attribute_name(:qr_code) %></td>
-      <td><%= @product.qr_code %></td>
+      <td class="right aligned"><%= Product.human_attribute_name(:qr_prefix) %></td>
+      <td><%= @product.qr_prefix %></td>
     </tr>
   </tbody>
 </table>
