--- a/app/views/factory/admin/part_taxons/index.html.erb
+++ b/app/views/factory/admin/part_taxons/index.html.erb
@@ -1,7 +1,7 @@
 <div class="ui top attached borderless menu">
-  <div class="header item">Purchase Taxons</div>
+  <div class="header item">Part Taxons</div>
   <div class="right menu">
-    <div class="item"><%= link_to 'New Purchase Taxon', new_admin_part_taxon_path, class: 'ui teal button' %></div>
+    <div class="item"><%= link_to 'New Part Taxon', new_admin_part_taxon_path, class: 'ui teal button' %></div>
   </div>
 </div>
 
