--- a/app/views/factory/my/customs/show.html.erb
+++ b/app/views/factory/my/customs/show.html.erb
@@ -1,5 +1,5 @@
 <div class="ui segment breadcrumb">
-  <%= link_to 'Back', customs_path, class: 'section' %>
+  <%= link_to 'Back', my_customs_path, class: 'section' %>
   <div class="divider"> / </div>
   <div class="active section">Show</div>
 </div>
