--- a/app/views/factory/my/facilitate_providers/edit.html.erb
+++ b/app/views/factory/my/facilitate_providers/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Facilitate Provider</h1>
+<div class="ui segment breadcrumb">
+  <%= link_to 'Back', my_facilitate_providers_path, class: 'section' %>
+  <div class="divider">/</div>
+  <div class="active section">Edit</div>
+</div>
 
-<%= render 'form', facilitate_provider: @facilitate_provider %>
-
-<%= link_to 'Show', @facilitate_provider %> |
-<%= link_to 'Back', facilitate_providers_path %>
+<div class="ui segment">
+  <%= form_with model: @facilitate_provider, url: my_facilitate_provider_path(@facilitate_provider), local: true do |f| %>
+    <%= render partial: 'form', locals: { f: f } %>
+  <% end %>
+</div>
