--- a/app/views/factory/my/facilitate_providers/new.html.erb
+++ b/app/views/factory/my/facilitate_providers/new.html.erb
@@ -1,3 +1,13 @@
+<div class="ui segment breadcrumb">
+  <%= link_to 'Back', my_facilitate_providers_path, class: 'section' %>
+  <div class="divider">/</div>
+  <div class="active section">Edit</div>
+</div>
 
-<%= render 'form', facilitate_provider: @facilitate_provider %>
+<div class="ui segment">
+  <%= form_with model: @facilitate_provider, url: my_facilitate_providers_path, local: true do |f| %>
+    <%= render partial: 'form', locals: { f: f } %>
+  <% end %>
+</div>
+
 
