--- a/app/views/factory/my/providers/show.html.erb
+++ b/app/views/factory/my/providers/show.html.erb
@@ -4,10 +4,6 @@
   <%= render 'provider' %>
 
   <h3 class="ui header">提供服务</h3>
-  <div class="ui blue labels">
-    <% @provider.facilitate_providers.verified.each do |facilitate_provider| %>
-      <%= link_to facilitate_provider.facilitate.name, my_facilitate_provider_path(facilitate_provider), class: 'ui label' %>
-    <% end %>
-  </div>
+  <%= render partial: 'factory/my/facilitate_providers/table', locals: { facilitate_providers: @provider.facilitate_providers } %>
 <% end %>
 
