--- a/app/views/factory/admin/facilitates/_facilitate.html.erb
+++ b/app/views/factory/admin/facilitates/_facilitate.html.erb
@@ -4,6 +4,7 @@
   <td><%= image_tag facilitate.logo, size: '50x50' if facilitate.logo.attached? %></td>
   <td><%= facilitate.desc %></td>
   <td><time><%= facilitate.created_at.to_s(:rfc822) %></time></td>
+  <td><%= facilitate.price %></td>
   <td>
     <%= link_to '供应商管理', admin_facilitate_good_providers_path(facilitate), class: 'ui orange label' %>
     <%= link_to admin_facilitate_path(facilitate), data: { tooltip: t('.show') }, class: 'ui blue mini icon button' do %>
