--- a/app/views/factory/admin/facilitates/index.html.erb
+++ b/app/views/factory/admin/facilitates/index.html.erb
@@ -18,6 +18,7 @@
       <th><%= Facilitate.human_attribute_name(:logo) %></th>
       <th><%= Facilitate.human_attribute_name(:desc) %></th>
       <th><%= Facilitate.human_attribute_name(:created_at) %></th>
+      <th><%= Facilitate.human_attribute_name(:price) %></th>
       <th></th>
     </tr>
   </thead>
