--- a/app/views/factory/admin/base/_nav.html.erb
+++ b/app/views/factory/admin/base/_nav.html.erb
@@ -22,5 +22,11 @@
       <%= link_to '服务管理', admin_facilitates_path, class: active_helper(controllers: ['facilitates', 'facilitate_providers']) %>
     </div>
   </div>
+  <div class="ui dropdown item">
+    <span>商品管理</span>
+    <div class="menu">
+      <%= link_to '供应商', admin_providers_path, class: active_helper(controller: 'providers') %>
+    </div>
+  </div>
 </div>
 
