--- a/app/views/factory/my/providers/show.html.erb
+++ b/app/views/factory/my/providers/show.html.erb
@@ -4,6 +4,6 @@
   <%= render 'provider' %>
 
   <h3 class="ui header">提供服务</h3>
-  <%= render partial: 'factory/my/facilitate_providers/table', locals: { facilitate_providers: @provider.facilitate_providers } %>
+  <%= render partial: 'factory/my/good_providers/table', locals: { good_providers: @provider.good_providers } %>
 <% end %>
 
