--- a/app/views/factory/my/good_providers/_form.html.erb
+++ b/app/views/factory/my/good_providers/_form.html.erb
@@ -1,3 +1,4 @@
-<%= f.hidden_field :facilitate_id %>
+<%= f.hidden_field :good_type %>
+<%= f.hidden_field :good_id %>
 <%= f.number_field :export_price %>
 <%= f.submit %>
