--- a/app/views/factory/my/good_providers/show.html.erb
+++ b/app/views/factory/my/good_providers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="sixteen wide column">
 
 
-  <%= render partial: 'top_bar', locals: { facilitate_provider: @facilitate_provider } %>
+  <%# render partial: 'top_bar', locals: { good_provider: @good_provider } %>
 
 </div>
 
