--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.text_field :name %>
   <%= f.collection_select :part_ids, Part.all, :id, :name, {  }, { multiple: true } %>
   <%= f.text_field :qr_prefix %>
+  <%= f.number_field :reference_price %>
   <%= f.submit %>
 <% end %>
