--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -16,6 +16,8 @@
     <tr>
       <th><%= Product.human_attribute_name(:id) %></th>
       <th><%= Product.human_attribute_name(:name) %></th>
+      <th><%= Product.human_attribute_name(:logo) %></th>
+      <th><%= Product.human_attribute_name(:main_image) %></th>
       <th><%= Product.human_attribute_name(:qr_prefix) %></th>
       <th><%= Product.human_attribute_name(:reference_price) %></th>
       <th><%= Product.human_attribute_name(:parts) %></th>
@@ -28,6 +30,8 @@
     <tr>
       <td><%= product.id %></td>
       <td><%= product.name %></td>
+      <td><%= image_tag product.logo, class: 'ui small image' if product.logo.attached? %></td>
+      <td><%= image_tag product.main_image, class: 'ui small image' if product.main_image.attached? %></td>
       <td><%= product.qr_prefix %></td>
       <td><%= product.reference_price %></td>
       <td class="ui labels">
