remove two column

--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,11 +1,4 @@
-<div class="ui top attached borderless menu">
-  <div class="header item">Admin Products</div>
-  <div class="right menu">
-    <div class="item">
-      <%= link_to 'New Admin Product', new_admin_product_path, class: 'ui teal button' %>
-    </div>
-  </div>
-</div>
+<%= render 'nav' %>
 
 <div class="ui attached segment">
   <%= render 'search_form' %>
