--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,4 +1,5 @@
 <div class="ui top attached borderless menu">
+  <%= link_to 'Products', admin_products_path, class: 'item' %>
   <div class="header item">Admin Product Taxons</div>
   <div class="right menu">
     <div class="item">
