--- a/app/views/factory/admin/products/_menu.html.erb
+++ b/app/views/factory/admin/products/_menu.html.erb
@@ -1,5 +1,6 @@
 <div class="ui top attached borderless menu">
-  <div class="header item">Admin Products</div>
+  <div class="header item">Products</div>
+  <%= link_to 'Product Taxon', admin_product_taxons_path, class: 'item' %>
   <div class="right menu">
     <div class="item">
       <%= link_to 'New Admin Product', new_admin_product_path, class: 'ui teal button' %>
