--- a/app/views/factory/wx/products/show.html.erb
+++ b/app/views/factory/wx/products/show.html.erb
@@ -4,7 +4,7 @@
 </article>
 
 <div id="sti">
-  <span class="weui-btn weui-btn_primary">hah</span>
+  <span class="weui-btn weui-btn_primary" id="total_price"><%= @product.price %></span>
 </div>
 
 <% @product.part_taxons.each do |part_taxon| %>
@@ -18,7 +18,7 @@
       </span>
       <span class="weui-cell__ft">
         <span><%= part.price %></span>
-        <input type="radio" class="weui-check" name="radio1" id="part_<%= part.id %>">
+        <%= radio_button_tag :price, nil, false, data: { remote: true, method: :post, url: update_price_wx_customs_url, params: part.id }, class: 'weui-check', id: "part_#{part.id}" %>
         <span class="weui-icon-checked"></span>
       </span>
     </label>
