--- a/app/views/factory/wx/products/show.html.erb
+++ b/app/views/factory/wx/products/show.html.erb
@@ -18,7 +18,7 @@
       </span>
       <span class="weui-cell__ft">
         <span><%= part.price %></span>
-        <%= check_box_tag :price, nil, false, data: { remote: true, method: :post, url: update_price_wx_customs_url, params: part.id, target: 'input.output' }, class: 'weui-check', id: "part_#{part.id}" %>
+        <%= check_box_tag :price, nil, false, data: { remote: true, method: :post, url: update_price_wx_customs_url, target: 'input.output' }, class: 'weui-check', id: "part_#{part.id}" %>
         <i class="weui-icon-checked"></i>
       </span>
     </label>
