--- a/app/views/factory/wx/products/show.html.erb
+++ b/app/views/factory/wx/products/show.html.erb
@@ -7,6 +7,9 @@
   <span class="weui-btn weui-btn_primary" id="total_price"><%= @product.price %></span>
 </div>
 
+<%= form_with url: wx_custom_path, method: :patch, id: 'edit_custom' do %>
+<% end %>
+
 <% @product.part_taxons.each do |part_taxon| %>
 <div>
   <div class="weui-cells__title"><%= part_taxon.name %></div>
@@ -18,7 +21,7 @@
       </span>
       <span class="weui-cell__ft">
         <span><%= part.price %></span>
-        <%= check_box_tag :price, nil, false, data: { remote: true, method: :post, url: update_price_wx_customs_url, target: 'input.output' }, class: 'weui-check', id: "part_#{part.id}" %>
+        <%= check_box_tag :price, nil, false, data: { form: true, target: 'input.output' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
         <i class="weui-icon-checked"></i>
       </span>
     </label>
