--- a/app/views/factory/wx/customs/create.js.erb
+++ b/app/views/factory/wx/customs/create.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('total_price').innerText = '<%= @total_price %>';
+document.getElementById('total_price').innerText = '<%= @custom.price %>';
