--- a/app/views/factory/wx/products/show.html.erb
+++ b/app/views/factory/wx/products/show.html.erb
@@ -7,7 +7,7 @@
   <span class="weui-btn weui-btn_primary" id="total_price"><%= @product.price %></span>
 </div>
 
-<%= form_with scope: :custom, url: price_wx_customs_path, id: 'edit_custom' do |f| %>
+<%= form_with scope: :custom, url: wx_customs_path, id: 'edit_custom' do |f| %>
   <%= f.hidden_field :product_id, value: @product.id %>
 <% end %>
 
@@ -33,6 +33,10 @@
   </div>
 </div>
 <% end %>
+
+<div class="weui-btn-area">
+  <%= submit_tag 'save', form: 'edit_custom', class: 'weui-btn weui-btn_primary' %>
+</div>
 
 <% 15.times.each do |i| %>
   <p>嘿嘿嘿</p>
