--- a/app/views/factory/wx/products/show.html.erb
+++ b/app/views/factory/wx/products/show.html.erb
@@ -15,14 +15,14 @@
 <div>
   <div class="weui-cells__title"><%= part_taxon.name %></div>
   <div class="weui-cells weui-cells_radio">
-    <% @custom.parts.select { |part| part.part_taxon_id == part_taxon.id }.each do |part| %>
+    <% part_taxon.parts.each do |part| %>
     <label class="weui-cell weui-cell_disabled weui-check__label" for="part_<%= part.id %>" data-controller="input">
       <span class="weui-cell__bd">
         <span><%= part.name %></span>
       </span>
       <span class="weui-cell__ft">
         <span><%= part.price %></span>
-        <%= check_box_tag 'custom[part_ids][]', part.id, false, data: { form: true, target: 'input.output' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+        <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { form: true, target: 'input.output' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
         <i class="weui-icon-checked"></i>
       </span>
     </label>
@@ -37,7 +37,3 @@
 <div class="weui-btn-area">
   <%= submit_tag 'save', form: 'edit_custom', class: 'weui-btn weui-btn_primary' %>
 </div>
-
-<% 15.times.each do |i| %>
-  <p>嘿嘿嘿</p>
-<% end %>
