add disable function

--- a/app/views/factory/wx/customs/create.js.erb
+++ b/app/views/factory/wx/customs/create.js.erb
@@ -1,1 +1,2 @@
 document.getElementById('total_price').innerText = '<%= @custom.price %>';
+document.getElementById('part_1_label').dataset.add_controller('disable');
